# shotgrid_casbin_adapter

./: .ruff.toml  404.html  CHANGELOG.md  CLAUDE.md  README.md  cog.toml  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-tests.yaml  docs-deploy.yaml  package-release.yaml  version-bump.yaml
docs/: gen_ref_pages.py
examples/fastapi_rbac/: README.md  app.py
reference/SUMMARY/: index.html
reference/shotgrid_casbin_adapter/: index.html
reference/shotgrid_casbin_adapter/cli/: index.html
reference/shotgrid_casbin_adapter/constants/: index.html
reference/shotgrid_casbin_adapter/core/: index.html
reference/shotgrid_casbin_adapter/filter/: index.html
reference/shotgrid_casbin_adapter/helpers/: index.html
search/: search_index.json
shotgrid_casbin_adapter/: __init__.py  cli.py  constants.py  core.py  filter.py  helpers.py
tests/: __init__.py  test_adapter.py  test_cli.py  test_import.py
